syntax = "proto3";

package auth;

option go_package = "./;auth";

import "google/protobuf/timestamp.proto";

// --------------------------
// Messages
// --------------------------

// Used for internal storage (not exposed directly in responses)
message User {
    string id = 1;
    google.protobuf.Timestamp created_at = 2;
    string name = 3;
    string email = 4;
    string password = 5;  // Only used during registration/authentication
    bool activated = 6;
    int32 version = 7;
}

// --------------------------
// CreateUser
// --------------------------
message CreateUserRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}

message CreateUserResponse {}

// --------------------------
// AuthenticateUser
// --------------------------
message AuthenticateUserRequest {
    string email = 1;
    string password = 2;
}

message AuthenticateUserResponse {
    string access_token = 1;   // snake_case convention
    string refresh_token = 2;
    int64 expires_in = 3;      // Optional: token TTL in seconds
}


// --------------------------
// AuthorizeUser 
// --------------------------
message AuthorizeUserRequest {
    string tocken = 1;
}

message AuthorizeUserResponse {
    string user_id = 1;
}
// --------------------------
// Service
// --------------------------
service AuthService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc AuthenticateUser(AuthenticateUserRequest) returns (AuthenticateUserResponse);
    rpc AuthorizeUser(AuthorizeUserRequest) returns (AuthorizeUserResponse);
}
